--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,20 +4,20 @@ sphinx
 recommonmark
 sphinx_rtd_theme
 # Dependencies here are only those required by import
-termcolor
-numpy
-tqdm
-matplotlib
-termcolor
-yacs
-tabulate
-cloudpickle
-Pillow
-future
-git+https://github.com/facebookresearch/fvcore.git
-https://download.pytorch.org/whl/cpu/torch-1.8.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.9.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
-omegaconf>=2.1.0.dev24
-hydra-core>=1.1.0.dev5
-scipy
-timm
+#termcolor
+#numpy
+#tqdm
+#matplotlib
+#termcolor
+#yacs
+#tabulate
+#cloudpickle
+#Pillow
+#future
+#git+https://github.com/facebookresearch/fvcore.git
+#https://download.pytorch.org/whl/cpu/torch-1.8.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
+#https://download.pytorch.org/whl/cpu/torchvision-0.9.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
+#omegaconf>=2.1.0.dev24
+#hydra-core>=1.1.0.dev5
+#scipy
+#timm
